--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,19 @@
   </head>
   <body class="page">
     <div class="header">
-      <a href="#header__nav" class="header__menu"></a>
-      <a href="#" class="header__logo"></a>
+      <a href="#header__nav" class="header__menu">
+      </a>
+      <a href="#" class="header__logo">
+        <svg
+          width="58"
+          height="63"
+          viewBox="0 0 58 63"
+          fill="none"
+        >
+          <path d="M26.7816 0.799998V26H21.9936L9.42964 10.7V26H3.66964V0.799998H8.49364L21.0216 16.1V0.799998H26.7816ZM49.3399 20.6H37.6399L35.4079 26H29.4319L40.6639 0.799998H46.4239L57.6919 26H51.5719L49.3399 20.6ZM47.5039 16.172L43.5079 6.524L39.5119 16.172H47.5039ZM23.543 62L23.507 46.88L16.091 59.336H13.463L6.08305 47.204V62H0.611047V36.8H5.43505L14.867 52.46L24.155 36.8H28.943L29.015 62H23.543ZM46.1899 62.432C42.5899 62.432 39.7819 61.436 37.7659 59.444C35.7739 57.452 34.7779 54.608 34.7779 50.912V36.8H40.6099V50.696C40.6099 55.208 42.4819 57.464 46.2259 57.464C48.0499 57.464 49.4419 56.924 50.4019 55.844C51.3619 54.74 51.8419 53.024 51.8419 50.696V36.8H57.6019V50.912C57.6019 54.608 56.5939 57.452 54.5779 59.444C52.5859 61.436 49.7899 62.432 46.1899 62.432Z" fill="#0F0E08">
+        </svg>
+
+      </a>
       <div class="header__nav container" id="header__nav">
         <a href="#" class="header__link header__link--logo"></a>
         <a href="#museum-of-art" class="header__link">Художній музей</a>
@@ -121,7 +132,12 @@
       <div class="subscription__container">
         <h2 class="subscription__title">Підписка</h2>
         <div class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
-        <form action="#" class="subscription__form">
+        <form
+          action="#"
+          class="subscription__form"
+          onsubmit="return false"
+          method="post"
+          >
           <input
             class="subscription__email"
             type="email"
@@ -130,7 +146,7 @@
             placeholder="Email"
             required
           >
-          <button class="subscription__button"></button>
+          <button type="reset" class="subscription__button"></button>
         </form>
       </div>
     </div>
@@ -139,18 +155,45 @@
       <div class="footer-grid grid">
         <div class="footer-grid__item--1-2 grid__itemT--1-1 grid__itemD--1-2">
           <div class="footer__links">
-            <a href="#" class="footer__logo"></a>
+            <a href="#" class="footer__logo">
+              <svg
+                width="58"
+                height="63"
+                viewBox="0 0 58 63"
+                fill="none"
+              >
+                <path d="M26.7816 0.799998V26H21.9936L9.42964 10.7V26H3.66964V0.799998H8.49364L21.0216 16.1V0.799998H26.7816ZM49.3399 20.6H37.6399L35.4079 26H29.4319L40.6639 0.799998H46.4239L57.6919 26H51.5719L49.3399 20.6ZM47.5039 16.172L43.5079 6.524L39.5119 16.172H47.5039ZM23.543 62L23.507 46.88L16.091 59.336H13.463L6.08305 47.204V62H0.611047V36.8H5.43505L14.867 52.46L24.155 36.8H28.943L29.015 62H23.543ZM46.1899 62.432C42.5899 62.432 39.7819 61.436 37.7659 59.444C35.7739 57.452 34.7779 54.608 34.7779 50.912V36.8H40.6099V50.696C40.6099 55.208 42.4819 57.464 46.2259 57.464C48.0499 57.464 49.4419 56.924 50.4019 55.844C51.3619 54.74 51.8419 53.024 51.8419 50.696V36.8H57.6019V50.912C57.6019 54.608 56.5939 57.452 54.5779 59.444C52.5859 61.436 49.7899 62.432 46.1899 62.432Z" fill="#0F0E08">
+              </svg>
+            </a>
             <div class="footer__socials">
               <a
                 href="https://www.facebook.com/Museum/"
                 class="footer__social footer__social-facebook"
                 target="_blank"
-              ></a>
+              >
+                <svg
+                  width="12"
+                  height="24"
+                  viewBox="0 0 12 24"
+                  fill="none"
+                >
+                  <path d="M2.80721 4.64902C2.80721 5.25383 2.80721 7.95334 2.80721 7.95334H0.390137V11.9939H2.80721V24.0009H7.77238V11.9942H11.1042C11.1042 11.9942 11.4163 10.0568 11.5675 7.93844C11.1339 7.93844 7.79116 7.93844 7.79116 7.93844C7.79116 7.93844 7.79116 5.58779 7.79116 5.17577C7.79116 4.76285 8.33251 4.20743 8.86757 4.20743C9.40163 4.20743 10.5288 4.20743 11.5728 4.20743C11.5728 3.6573 11.5728 1.7565 11.5728 0.00100709C10.1791 0.00100709 8.59352 0.00100709 7.89462 0.00100709C2.68447 0.000728099 2.80721 4.04527 2.80721 4.64902Z" fill="black">
+                </svg>
+              </a>
               <a
                 href="https://www.instagram.com/Museum/"
-                class="footer__social footer__social-instagram"
+                class="footer__social"
                 target="_blank"
-              ></a>
+              >
+                <svg
+                  width="25"
+                  height="24"
+                  viewBox="0 0 25 24"
+                  fill="none"
+                >
+                  <path d="M18.4658 0H7.45897C3.8767 0 0.962402 2.9143 0.962402 6.49657V17.5036C0.962402 21.0857 3.8767 24 7.45897 24H18.466C22.0481 24 24.9624 21.0857 24.9624 17.5036V6.49657C24.9624 2.9143 22.0481 0 18.4658 0V0ZM12.9624 18.5623C9.34386 18.5623 6.40007 15.6185 6.40007 12C6.40007 8.38145 9.34386 5.43767 12.9624 5.43767C16.5809 5.43767 19.5247 8.38145 19.5247 12C19.5247 15.6185 16.5809 18.5623 12.9624 18.5623ZM19.6816 6.98528C18.6123 6.98528 17.7425 6.11553 17.7425 5.04619C17.7425 3.97686 18.6123 3.10693 19.6816 3.10693C20.7509 3.10693 21.6209 3.97686 21.6209 5.04619C21.6209 6.11553 20.7509 6.98528 19.6816 6.98528Z" fill="black">
+                </svg>
+              </a>
             </div>
           </div>
         </div>
