--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,438 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>NA MU</title>
+    <link
+      rel="icon"
+      href="images/NA MU.svg"
+    >
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    >
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"     rel="stylesheet"
+    >
+    <link
+      rel="stylesheet"
+      href="./styles/main.scss"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <div class="page__shadow"></div>
+    <header class="header">
+      <div class="header__top">
+        <div class="container">
+          <a
+            href="#menu"
+            class="icon icon--menu"
+          >
+          </a>
+        </div>
+      </div>
+      <div class="header-container">
+        <div class="grid grid--desctop">
+          <div class="grid__item grid__item--desctop-small-4-6 grid__item--desctop-big-6-12 page__section-container">         
+            <section class="page__section page__section--photo photo">                  
+              <a
+                href="index.html"
+                onclick="return false;"
+              >
+                <div class="logo--photo-container">
+                  <img
+                    class="logo logo--photo "
+                    src="images/NA MU.svg"
+                    alt="MyBike"
+                  >
+                </div>
+              </a>                                       
+            </section> 
+          </div>
+          <div class="grid__item grid__item--desctop-small-1-3 grid__item--desctop-big-1-5">
+            <div class="about__container">
+              <section
+                class="page__section about"
+              >
+                <div class="about__position">                              
+                  <h1 class="about__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>              
+                  <div class="about__tickets-container">
+                    <div class="about__tickets-position">
+                      <div class="about__tickets">
+                        <div class="about__content">
+                          Квітки
+                        </div>
+                        <a
+                          href="#exhibitions"
+                          class="about__button"
+                        >
+                          <img
+                            src="images/Museum_button.svg"
+                            alt="button"
+                            class="about__button-image"
+                          >
+                        </a>
+                      </div>
+                    </div>
+                  </div>                                       
+                </div>
+              </section>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <nav
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__top">
+          <div class="menu__content">
+            <div class="menu__cross">
+              <a
+                href="#"
+                class="icon icon--cross"
+              >
+              </a>
+            </div>
+            <ul class="menu__list">
+              <li class="menu__item--first-row">
+                <a
+                  href="#galery"
+                  class="menu__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="menu__item--first-row">
+                <a
+                  href="#about-us"
+                  class="menu__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="menu__item--second-row">
+                <a
+                  href="#exhibitions"
+                  class="menu__link"
+                >
+                  Виставки та<br>події
+                </a>
+              </li>
+              <li class="menu__item--second-row">
+                <a
+                  href="#contact"
+                  class="menu__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="menu__line"></div>
+          <div class="menu__info-container">
+            <div class="menu__info">
+              Графік роботи<br>
+              <br>
+              <strong>12:00— 20:00</strong> середа<br>
+              <strong>12:00— 20:00</strong> четвер<br>
+              <strong>12:00 — 20:00</strong> п’ятниця<br>
+              <strong>11:00 — 19:00</strong> субота<br>
+              <strong>11:00 — 19:00</strong> неділя
+            </div>
+            <div class="menu__info">
+              <strong>Вихідні:</strong> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину<br>
+              до закриття музею
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <main>      
+      <section class="page__section exhibitions" id="exhibitions">
+        <div class="container">
+          <h2 class="page__section-title title">Актуальні події</h2>
+          <div class="exhibitions__events events">      
+            <div class="grid grid--desctop">
+              <div class="grid__item grid__item--desctop-small-1-6 grid__item--desctop-big-1-7">
+                <img
+                  src="./images/photos/Museum_1.jpg"
+                  alt="events photo"
+                  class="events__photo"
+                >                                  
+              </div>
+              <div class="grid__item grid__item--desctop-small-1-6 grid__item--desctop-big-9-12 grid__item--events">                 
+                <div class="events__date ">
+                  <div class="events__date-text">Виставка</div>
+                  <div class="events__date-numbers">26.08-29.11.2019</div>
+                </div>
+                <div class="events__title">
+                  <div class="events__title-text">Йду і повертаюсь</div>
+                  <div class="events__title-rect"></div>
+                </div>
+                <p class="events__description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>  
+              </div>
+            </div>
+          </div>
+          <div class="exhibitions__events events">
+            <div class="grid grid--desctop">
+              <div class="grid__item grid__item--desctop-small-1-6 grid__item--desctop-big-1-7">
+                <img
+                  src="./images/photos/Museum_2.jpg"
+                  alt="events photo"
+                  class="events__photo"
+                >                                  
+              </div>
+              <div class="grid__item grid__item--desctop-small-1-6 grid__item--desctop-big-9-12 grid__item--events">                 
+                <div class="events__date ">
+                  <div class="events__date-text">Виставка</div>
+                  <div class="events__date-numbers">26.08-29.11.2019</div>
+                </div>
+                <div class="events__title">
+                  <div class="events__title-text">І спогади і мрії</div>
+                  <div class="events__title-rect"></div>
+                </div>
+                <p class="events__description">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>  
+              </div>
+            </div> 
+          </div> 
+        </div>
+      </section>
+      <section class="page__section page__section--lection lection">
+        <div class="lection__photo-container">
+          <img
+            class="lection__photo"
+            src="./images/photos/Museum_4.jpg"
+            alt="Lection photo"
+          >
+        </div>
+        <div class="lection__item">
+          <div class="lection__container">
+            <div class="lection__grid">
+              <div class="lection__text">
+                Лекція
+              </div>
+              <div class="lection__date">
+                26/08/2019 - 11:00
+              </div>
+              <div class="lection__content">
+                Від класицизму до романтизму
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="page__section galery" id="galery">
+        <div class="container">
+          <h2 class="page__section-title title">Галерея</h2>
+          <div class="galery__paintings paintings">
+            <div class="paintings__photos">
+              <div class="grid">
+                <div class="grid__item grid__item--desctop-small-1-3 grid__item--desctop-big-1-4">
+                  <div class="paintings__photo-container">
+                    <img
+                    src="./images/photos/Museum_5.jpg"
+                    alt="Galery picture"
+                    class="paintings__photo"
+                  >
+                  </div>
+                </div>
+                <div class="grid__item grid__item--desctop-small-4-6 grid__item--desctop-big-5-12">
+                  <div class="paintings__photo-container">
+                    <img
+                    src="./images/photos/Museum_6.jpg"
+                    alt="Galery picture"
+                    class="paintings__photo"
+                  >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="paintings__photos">
+              <div class="grid">
+                <div class="grid__item grid__item--desctop-small-1-3 grid__item--desctop-big-1-8">
+                  <div class="paintings__photo-container-second">
+                    <img
+                    src="./images/photos/Museum_9.jpg"
+                    alt="Galery picture"
+                    class="paintings__photo"
+                  >
+                  </div>
+                </div>
+                <div class="grid__item grid__item--desctop-small-4-6 grid__item--desctop-big-9-12">
+                  <div class="paintings__photo-container-second">
+                    <img
+                    src="./images/photos/Museum_10.jpg"
+                    alt="Galery picture"
+                    class="paintings__photo"
+                  >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>            
+        </div>
+      </section>
+      <section class="page__section subscribe" id="about-us">
+        <div class="subscribe__photo-container">
+          <div class="subscribe__photo">
+            <div class="container">
+              <div class="grid grid--desctop">                                  
+                <div class="grid__item grid__item--desctop-small-2-5 grid__item--desctop-big-4-9">
+                  <h2 class="subscribe__title">Підписка</h2>
+                  <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+                  <form
+                    action="#"
+                    class="subscribe__send"
+                  >
+                    <input
+                      type="email"
+                      placeholder="Email"
+                      class="subscribe__email"
+                      required
+                    >
+                    <button
+                      class="subscribe__button"
+                    >
+                      <img
+                        src="images/Museum_button_black.svg"
+                        alt="button"
+                        class="subscribe__button-image"
+                      >
+                    </button>     
+                  </form>
+                </div>                                       
+              </div> 
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="grid grid--footer">
+          <div class="grid__item grid__item--on-phone-1 grid__item--laptop-1 grid__item--desctop-1">
+            <a href="index.html">
+              <img
+                class="logo"
+                src="images/NA MU.svg"
+                alt="MyBike"
+              >
+            </a>
+          </div>
+          <div class="grid__item grid__item--on-phone-2 grid__item--laptop-1 grid__item--desctop-1 footer__logos-container">
+            <div class="footer__logos-position">
+              <div class="footer__logos">
+                <a
+                  class="footer__facebook"
+                  target="_blank"
+                  href="#"
+                >
+                  <img
+                    src="./images/Museum_facebook.svg"
+                    alt="Facebook"
+                  >
+                </a>
+                <a
+                  class="footer__inst"
+                  target="_blank"
+                  href="#"
+                >
+                  <img
+                    src="./images/Museum_inst.svg"
+                    alt="Instagram"
+                  >
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="grid__item grid__item--on-phone-1 grid__item--desctop-small-2-3 grid__item--desctop-big-3-4 footer__content-container">
+            <div class="footer__content">
+              <h3 class="footer__title">Графік роботи</h3>
+              <div class="footer__info">
+                <strong>12:00 — 20:00</strong> середа<br>
+                <strong>12:00 — 20:00</strong> четвер<br>
+                <strong>12:00 — 20:00</strong> п’ятниця<br>
+                <strong>11:00 — 19:00</strong> субота<br>
+                <strong>11:00 — 19:00</strong> неділя<br>
+                <br>
+                <strong>Вихідні:</strong> понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину <br>
+                до закриття музею
+              </div>
+            </div>
+          </div>
+          <div class="grid__item grid__item--on-phone-2 grid__item--desctop-small-4-5 grid__item--desctop-big-5-6 footer__content-container">
+            <div class="footer__content">
+              <h3 class="footer__title">Контакти:</h3>
+              <div class="footer__info">
+                вул. М. Грушевського, 6; Київ, 01001<br>
+                тел. +38 (044) 278-13-57<br>
+                факс +38 (044) 278-74-54<br>
+                e-mail: info@namu.kiev.ua
+              </div>
+            </div>
+          </div>
+          <div class="grid__item grid__item--on-phone-1-2 grid__item--desctop-small-2-5 grid__item--desctop-7 footer__line-container">
+            <div class="footer__line"></div>
+          </div>
+          <div class="grid__item grid__item--on-phone-1 grid__item--desctop-small-2-3 grid__item--desctop-big-8-9 footer__link-container">
+            <a
+              class="footer__link"
+              href="#galery"
+            >
+              Галерея
+            </a>
+            <a
+              class="footer__link"
+              href="#exhibitions"
+            >
+              Виставки та події
+            </a>
+          </div>
+          <div class="grid__item grid__item--on-phone-2 grid__item--desctop-small-4-5 grid__item--desctop-big-10-11 footer__link-container">
+            <a
+              class="footer__link"
+              href="#about-us"
+            >
+              Про Нас
+            </a>
+            <a
+              class="footer__link"
+              href="#subscribe"
+            >
+              Контакти
+            </a>
+          </div>
+        </div>
+        <div class="grid grid--desctop">
+          <div class="grid__item grid__item--desctop-small-1-6 grid__item--desctop-big-1-12 footer__design-container">
+            <div class="footer__design">
+              Designed by Zhyriada Marina
+            </div>
+            <div class="footer__design">
+              Copyright © 2019. All Rights Reserved.
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+    >
+    </script>
   </body>
 </html>
