fixed mobile version and the problematic positionings

--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
                   26.08-29.11.2019
                 </div>
               </div>
-              <div class="page__section-name">
+              <div class="page__section-names">
                 Йду i повертаюсь
                 <img
                   src="./images/orange.png"
@@ -186,7 +186,7 @@
                   26.08-29.11.2019
                 </div>
               </div>
-              <div class="page__section-name">
+              <div class="page__section-names">
                 I спогади i мрії
                 <img
                   src="./images/orange.png"
@@ -205,7 +205,7 @@
       <section class="page__section page__section-lection">
         <div class="page__section-announcement">
           <div class="page__section-announcement--top">
-            <div class="page__section-description" id="lectute">
+            <div class="page__section-description" id="lecture">
               ЛЕКЦІЯ
             </div>
             <div class="page__section-date">26/08/2019 - 11:00</div>
@@ -223,37 +223,36 @@
           Галерея
         </h2>
         <div class="grid">
-          <div class="gallery__paintings"></div>
-          <div class="grid__item grid__item--1-4">
+          <div class="grid__item grid__item--1-4 gallery__photo-wrapper-type3">
             <div class="gallery__photo-container">
               <img
                 src="./images/swipe1.png"
                 alt="girl"
-                class="gallery__photo">
+                class="gallery__photo gallery__photo--1">
             </div>
           </div>
-          <div class="grid__item grid__item--5-12">
+          <div class="grid__item grid__item--5-12 gallery__photo-wrapper-type1 gallery__photo-center">
             <div class="gallery__photo-container">
               <img
               src="./images/swipe2.png"
               alt="village"
-              class="gallery__photo">
+              class="gallery__photo gallery__photo--2">
             </div>
           </div>
-          <div class="grid__item grid__item--1-8">
+          <div class="grid__item grid__item--1-8 gallery__photo-wrapper-type2">
             <div class="gallery__photo-container">
               <img
               src="./images/swipe3.png"
               alt="park"
-              class="gallery__photo">
+              class="gallery__photo gallery__photo--3">
             </div>
           </div>
-          <div class="grid__item grid__item--9-12">
+          <div class="grid__item grid__item--9-12 gallery__photo-wrapper-type2">
             <div class="gallery__photo-container">
               <img
               src="./images/swipe4.png"
               alt="sea"
-              class="gallery__photo">
+              class="gallery__photo gallery__photo--4">
             </div>
           </div>
         </div>
@@ -311,7 +310,7 @@
                 name="email"
                 class="subscribe__button-text"
                 required>
-              <a class="subscribe__button-search">></a>
+              <button type="submit" class="subscribe__button-search">></button>
             </form>
           </div>
         </div>
@@ -409,7 +408,7 @@
           </div>
         </div>
         <div class="footer__toTheTop">
-          <a href="#">
+          <a href="#" class="footer__toTheTop--link">
             <img
           src="./images/arrow.png"
           alt="toTheTop"
