--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>NAMU</title>
     <link
       rel="shortcut icon"
-      href="../src/images/favicon.jpg"
+      href="../src/images/logo.png"
       type="image/x-icon"
     >
     <link rel="stylesheet" href="./styles/main.scss">
