--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
   </head>
   <body class="page__body">
     <header class="page__section header">
@@ -130,7 +131,6 @@
             </div>
           </div>
 
-
           <div class="events">
             <div class="grid grid--desktop">
               <div class="grid__item grid__item_s--1-6 grid__item_m--1-7">
@@ -166,15 +166,18 @@
           </div>
 
           <div class="events">
-            <div class="grid grid--desktop">
-              <div class="grid__item grid__item_s--2-5 grid__item_m--4-9">
-                <div class="events__info">
-                  <div class="events__date">
-                    <h3 class="events__date-name">
-                      ЛЕКЦІЯ 26/08/2019 - 11:00
-                    </h3>
-                  </div>
+            <div class="lecture">
+              <img
+                class="lecture__img"
+                src="images/lecture.png"
+                alt="лекція"
+              >
 
+              <div class="container grid grid--desktop">
+                <div class="lecture__description grid__item grid__item_s--2-5 grid__item_m--4-9">
+                  <h3 class="events__date-name">
+                    ЛЕКЦІЯ 26/08/2019 - 11:00
+                  </h3>
                   <h4 class="events__subtitle">
                     Від класицизму до романтизму
                   </h4>
@@ -182,7 +185,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </section>
 
@@ -191,6 +193,45 @@
           <h2 class="events__title">
             Галерея
           </h2>
+
+          <div class="image-slider swiper" hidden>
+            <div class="image-slider__wrapper swiper-wrapper">
+              <div class="image-slider__slide swiper-slide">
+                <div class="place__photo-container">
+                  <img
+                    src="images/galery/galery1.png"
+                    alt="galery 1"
+                    class="place__photo"
+                  >
+                </div>
+              </div>
+              <div class="image-slider__slide swiper-slide">
+                <div class="place__photo-container">
+                  <img
+                    src="images/galery/galery2.png"
+                    alt="galery 2"
+                    class="place__photo"
+                  >
+                </div>
+              </div>
+              <div class="image-slider__slide swiper-slide">
+                <div class="place__photo-container">
+                  <img
+                    src="images/galery/galery3.png"
+                    alt="galery 3"
+                    class="place__photo"
+                  >
+                </div>
+              </div>
+              ...
+            </div>
+            <div class="swiper-pagination"></div>
+
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+            <div class="swiper-scrollbar"></div>
+          </div>
 
           <div class="gallery__place place">
             <div class="place__photos">
@@ -247,31 +288,33 @@
       </section>
 
       <section class="page__section subscription">
-        <div class="container">
-          <div class="grid grid--desktop">
-            <div class="grid__item grid__item_s--2-5 grid__item_m--5-8">
-              <h2 class="page__section-title">
+        <div class="container grid grid--desktop">
+          <div class="subscription__constetn grid__item grid__item_s--2-5 grid__item_m--4-9">
+            <div>
+              <h2 class="subscription__title page__section-title">
                 Підписка
               </h2>
-            </div>
-
-            <div class="grid__item grid__item_s--2-5 grid__item_m--4-9">
-              <p class="page__section-paragraph">
+              <p class="subscription__paragraph">
                 Бути в курсі всіх актуальних подій та останніх новин.
               </p>
             </div>
 
-            <div class="grid__item grid__item_s--2-4 grid__item_m--4-8">
-              <form action="#" method="get">
-                <input
-                  class="subscription__field form-field"
-                  name="Email"
-                  placeholder="E-mail"
-                  type="email"
-                  required
-                >
-              </form>
-            </div>
+            <form
+              class="subscription__form"
+              action="#"
+              method="get"
+            >
+              <input
+                class="subscription__field"
+                name="Email"
+                placeholder="E-mail"
+                type="email"
+                required
+              >
+              <button id="send" class="subscription__button">
+                <span class="subscription__arrow"></span>
+              </button>
+            </form>
           </div>
         </div>
       </section>
@@ -407,5 +450,6 @@
       </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </body>
 </html>
