--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,352 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en uk-UA"  class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <a href="#menu" >
+        <img
+          class="header__menu-opener container"
+          src="./images/menu-open.svg"
+          alt="opener"
+        >
+      </a>
+      <a href="#" class="logo">
+        NA
+        <br>
+        MU
+      </a>
+    </header>
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__content--top">
+            <a href="#" >
+              <img
+                class="header__menu-close container"
+                src="./images/menu-close.svg"
+                alt="opener"
+              >
+            </a>
+            <div class="menu__about">
+              <div class="menu__aboutUs--first">
+                <a class="menu__aboutUs--first-title" href="#gallery">
+                  Галерея
+                </a>
+                <a class="menu__aboutUs--first-title" href="#lection">
+                  Виставки та події
+                </a>
+              </div>
+              <div class="menu__aboutUs--first">
+                <a class="menu__aboutUs--first-title" href="#event">
+                  Про Нас
+                </a>
+                <a class="menu__aboutUs--first-title" href="#footer">
+                  Контакти
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="menu__work">
+            <div class="menu__work--title">Графік роботи</div>
+            <div class="menu__work--time">
+              12:00— 20:00 середа
+              12:00— 20:00 четвер
+              12:00 — 20:00 п’ятниця
+              11:00 — 19:00 субота
+              11:00 — 19:00 неділя
+            </div>
+          </div>
+          <div class="menu__work--day">
+            Вихідні: понеділок, вівторок
+            <br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </div>
+        </div>
+      </div>
+    </nav>
+    <main class="main">
+      <section class="museum">
+        <div>
+          <img
+            class="museum__img"
+            src="./images/Natsionalnij-hudozhnij-muzej-header.svg" alt="museum"
+          >
+        </div>
+        <div class="museum__title  ">
+          <h1 class="museum__title-text">
+            ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </h1>
+          <div class="museum__title-tiket">
+            <div class="museum__title-tiket--text">
+              квитки
+            </div>
+            <div class="museum__title-tiket--arrow">
+              <img src="./images/arrow.svg" alt="arrow">
+            </div>
+          </div>
+          <div class="museum__title-tiket--before">Події</div>
+        </div>
+      </section>
+      <section class="event" id="event">
+        <div class="event__title">
+          Актуальні
+          події
+        </div>
+        <div class="event__title--first">
+          <img
+            class="event__title--first-img"
+            src="./images/event1.svg"
+            alt="event1"
+          >
+          <div class="event__title--first-about about">
+            <div class="about__subtitle">
+              <div class="about__subtitle-name">ВИСТАВКА</div>
+              <div class="about__subtitle-date">26.08-29.11.2019</div>
+            </div>
+            <div class="about__title">
+              <div>
+                Йду і повертаюсь
+              </div>
+              <div>
+                <img
+                  class="about__title-img"
+                  src="./images/about_after.svg"
+                  alt="about_after"
+                >
+              </div>
+            </div>
+            <p class="about__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+        </div>
+        <div class="event__title--first">
+          <img
+            class="event__title--first-img"
+            src="./images/event2.svg"
+            alt="event1"
+          >
+          <div class="event__title--first-about about">
+            <div class="about__subtitle">
+              <div class="about__subtitle-name">ВИСТАВКА</div>
+              <div class="about__subtitle-date">26.08-29.11.2019</div>
+            </div>
+            <div class="about__title">
+              <div>
+                І спогади і мрії
+              </div>
+              <div>
+                <img
+                  class="about__title-img"
+                  src="./images/about_after.svg" alt="about_after"
+                >
+              </div>
+            </div>
+            <p class="about__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії»..</p>
+          </div>
+        </div>
+      </section>
+      <section class="lection" id="lection">
+        <div>
+          <img
+            class="lection__img"
+            src="./images/lection.svg"
+            alt="lection"
+          >
+        </div>
+        <div class="lection__about about">
+          <div class="about__subtitle-lection">
+            <div class="about__subtitle-name">
+              ЛЕКЦІЯ
+            </div>
+            <div class="about__subtitle-date">
+              26/08/2019 - 11:00
+            </div>
+          </div>
+          <div class="about__title about__title-center">
+            Від класицизму до романтизму
+          </div>
+        </div>
+      </section>
+      <section class="galery" id="gallery">
+        <div class="gallery__title">Галерея</div>
+        <div class="gallery__slider">
+          <div>
+            <img
+              class="gallery__slide-img"
+              src="./images/gallery2.svg"
+              alt="img2"
+            >
+          </div>
+          <div>
+            <img
+              class="gallery__slide-img"
+              src="./images/gallery3.svg" alt="img3"
+            >
+          </div>
+          <div>
+            <img
+              class="gallery__slide-img"
+              src="./images/gallery4.svg" alt="img4"
+            >
+          </div>
+          <div>
+            <img
+              class="gallery__slide-img"
+              src="./images/gallery5.svg" alt="img5"
+            >
+          </div>
+        </div>
+        <div class="gallery__foto">
+          <div class="gallery__foto--1">
+            <img
+              class="gallery__foto--img"
+              src="./images/gallery4.svg"
+              alt="img"
+            >
+          </div>
+          <div class="gallery__foto--2">
+            <img
+              class="gallery__foto--img"
+              src="./images/gallery1.svg"
+              alt="img"
+            >
+          </div>
+          <div class="gallery__foto--3">
+            <img
+              class="gallery__foto--img"
+              src="./images/gallery2.svg"
+              alt="img"
+            >
+          </div>
+          <div class="gallery__foto--4">
+            <img
+              class="gallery__foto--img"
+              src="./images/gallery3.svg"
+              alt="img"
+            >
+          </div>
+        </div>
+      </section>
+      <section class="subscription" id="subscription">
+        <div class="subscription__about">
+          <div class="subscription__about--title">Підписка</div>
+          <div class="subscription__about--text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+          <form action="#" class="form">
+            <div class="subscription__about--email">
+              <input
+                type="email"
+                placeholder="E-mail" class="subscription__about--email-name"
+                required
+              >
+              <button type="submit" class="subscription__about--email-arrow">
+                <img src="./images/arrowBlack.svg" alt="arrowBlack">
+              </button>
+            </div>
+          </form>
+        </div>
+      </section>
+
+      <footer class="footer" id="footer">
+        <div class="footer__container">
+          <div class="footer__social">
+            <div class="footer__social--top">
+              <a  class="footer__social--link" href="#">
+                <div class="footer__social--logo">
+                  NA
+                  <br>
+                  MU
+                </div>
+              </a>
+              <div class="footer__social--web">
+                <a href="https://www.facebook.com">
+                  <img
+                    class="footer__social--web-logo"
+                    src="./images/Facebook (1).svg"
+                    alt="facebook"
+                  >
+                </a>
+                <a href="https://www.instagram.com">
+                  <img
+                    class="footer__social--web-logo"
+                    src="./images/instagram.svg"
+                    alt="instagram"
+                  >
+                </a>
+
+              </div>
+            </div>
+            <div class="footer__social--time">
+              <div class="footer__social--worktime">
+                <div class="footer__social--worktime-title">
+                  Графік роботи
+                </div>
+                <div class="footer__social--worktime-day">
+                  12:00 — 20:00 середа <br>
+                  12:00 — 20:00  четвер <br>
+                  12:00 — 20:00 п’ятниця <br>
+                  11:00 — 19:00 субота <br>
+                  11:00 — 19:00 неділя <br><br>
+                  Вихідні: понеділок, вівторок <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </div>
+              </div>
+              <div class="footer__social--contact">
+                <div class="footer__social--contact-title">Контакти:</div>
+                <div class="footer__social--contact-adress">
+                  вул. М. Грушевського, 6; Київ, 01001 <br>
+                  тел. +38 (044) 278-13-57 <br>
+                  факс +38 (044) 278-74-54 <br>
+                  e-mail: info@namu.kiev.ua
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="footer__aboutUs">
+            <div class="footer__aboutUs--first">
+              <a class="footer__aboutUs--first-title" href="#gallery">
+                Галерея
+              </a>
+              <a class="footer__aboutUs--first-title" href="#lection">
+                Виставки та події
+              </a>
+            </div>
+            <div class="footer__aboutUs--first">
+              <a class="footer__aboutUs--first-title" href="#event">
+                Про Нас
+              </a>
+              <a class="footer__aboutUs--first-title" href="#footer">
+                Контакти
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__copyright">
+          <div class="footer__copyright--text">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+          <div class="footer__copyright--text">
+            Designed by Zhyriada Marina
+          </div>
+        </div>
+      </footer>
+      <button id="backToTop" class="page__back-to-top">
+        <a href="#">
+          <img src="./images/back -to-top.svg" alt="back-to-top">
+        </a>
+      </button>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
