--- a/src/index.html
+++ b/src/index.html
@@ -36,23 +36,23 @@
 
     <div class="nav" id="menu">
       <div class="container">
+        <a href="#" class="menu menu--close"></a>
         <div class="nav__wrapper">
-          <div class="nav__container">
+          <div class="nav__container nav__container--first-child">
             <div class="nav__content">
-              <a href="#" class="menu menu--close"></a>
               <ul class="nav__list">
                 <li class="nav__item">
                   <a href="#gallery" class="nav__link">Галерея</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#about-us" class="nav__link">Про Нас</a>
+                  <a href="#event" class="nav__link">Виставки та <br> події</a>
                 </li>
               </ul>
             </div>
             <div class="nav__content">
               <ul class="nav__list nav__list--last-child">
                 <li class="nav__item">
-                  <a href="#event" class="nav__link">Виставки та <br> події</a>
+                  <a href="#about-us" class="nav__link">Про нас</a>
                 </li>
                 <li class="nav__item">
                   <a href="#contacts" class="nav__link">Контакти</a>
@@ -175,7 +175,7 @@
                 >
                 <img
                   class="gallery__images gallery__images--two"
-                  src="./images/picture2.jpg"
+                  src="./images/picture3.jpg"
                   alt="picture2"
                   id="2"
                 >
@@ -192,7 +192,7 @@
               <div class="gallery__desktop">
                 <img
                   class="gallery__images gallery__images--three"
-                  src="./images/picture3.jpg"
+                  src="./images/image-two.jpg"
                   alt="picture1"
                 >
                 <img
@@ -282,7 +282,7 @@
                 <div class="footer__contact">Контакти:</div>
                 <div class="footer__position">
                   <a
-                    class="footer__position__link" 
+                    class="footer__position--link"
                     href="https://goo.gl/maps/a9opeeP5C1KKVJ2r5"
                     target="_blank"
                     >
@@ -290,10 +290,10 @@
                     01001
                   </a>
                   <br>
-                  <a class="footer__position__link"  href="tel: +38 (044) 278-13-57">тел. +38 (044) 278-13-57</a> <br>
-                  <a class="footer__position__link"  href="fax:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
+                  <a class="footer__position--link"  href="tel: +38 (044) 278-13-57">тел. +38 (044) 278-13-57</a> <br>
+                  <a class="footer__position--link"  href="fax:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
                   <br>
-                  <a class="footer__position__link" href="e-mail: info@namu.kiev.ua"> e-mail: info@namu.kiev.ua</a>
+                  <a class="footer__position--link" href="e-mail: info@namu.kiev.ua"> e-mail: info@namu.kiev.ua</a>
                 </div>
               </div>
             </div>
@@ -309,14 +309,14 @@
             </div>
           </div>
         
-          <div>
+          <div class="footer__nav-container">
             <div class="footer__nav">
               <ul class="footer__list">
                 <li class="footer__item">
                   <a href="#gallery" class="footer__link">Галерея</a>
                 </li>
                 <li class="footer__item">
-                  <a href="#about-us" class="footer__link">Про Нас</a>
+                  <a href="#event"  class="footer__link">Виставки та події</a>
                 </li>
               </ul>
             </div>
@@ -324,7 +324,7 @@
             <div class="footer__nav footer__nav--last-child">
               <ul class="footer__list">
                 <li class="footer__item">
-                  <a href="#event" class="footer__link">Виставки та події</a>
+                  <a href="#about-us" class="footer__link">Про Нас</a>
                 </li>
                 <li class="footer__item">
                   <a href="#contacts" class="footer__link">Контакти</a>
