--- a/src/index.html
+++ b/src/index.html
@@ -296,18 +296,34 @@
                   target="_blank"
                 >
                   <img
-                    src="./images/footer/Facebook.png"
+                    src="./images/footer/Facebook.svg"
                     alt="Facebook"
-                    class="icons__facebook"
+                    class="icons__image"
+                  >
+
+                  <img
+                    src="./images/footer/facebook_hover.svg"
+                    alt="Facebook"
+                    class="icons__link icons__link--hover"
                   >
                 </a>
     
                 <a
                   href="https://www.instagram.com/namu.museum/"
-                  class="icons__link icons__link--rounded"
+                  class="icons__link"
                   target="_blank"
                 >
-                  <div class="icons__instagram"></div>
+                  <img
+                    src="./images/footer/Instagram.svg"
+                    alt="Instagram"
+                    class="icons__image"
+                  >
+
+                  <img
+                    src="./images/footer/instagram_hover.svg"
+                    alt="Instagram"
+                    class="icons__link icons__link--hover"
+                  >
                 </a>
               </div>
             </div>
@@ -376,7 +392,7 @@
           <div class="grid__item grid__item--phone-1-2 grid__item--2-5 grid__item--notebook-7-7">
             <div class="footer__line">
               <a href="#" class="footer__vector">
-                <img src="./images/footer/Vector .png" alt="upwards-arrow">
+                <img src="./images/footer/Vector.svg" alt="upwards-arrow">
               </a>
             </div>
           </div>
