fixed overscroll, links and added the eventListener

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="mainjs" href="./main.js">
     <script
       type="module"
       async
@@ -63,10 +64,10 @@
               </a>
             </li>
             <li class="menu__item">
-              <a href="#footer" class="menu__item-a">Про Hac</a>
+              <a href="#aboutUs" class="menu__item-a">Про Hac</a>
             </li>
             <li class="menu__item">
-              <a href="#contacts" class="menu__item-a">
+              <a href="tel:+38 (044) 278-13-57" class="menu__item-a">
                 Контакти
               </a>
             </li>
@@ -125,8 +126,12 @@
             </div>
           </div>
           <div class="grid__item grid__item--desktop-6-12 hero__background--row">
-            <img
+            <!--<img
               src="./images/background.png"
+              alt="backg"
+              class="hero__background"> -->
+            <img
+              src="./images/new bg.svg"
               alt="backg"
               class="hero__background">
           </div>
@@ -293,14 +298,17 @@
 
       <section class="subscribe">
         <h2 class="subscribe__title">Підписка</h2>
-        <div class="subscribe__action">
+        <div class="subscribe__action" id="aboutUs">
           Бути в курсі всіх актуальних
           <br>
           подій та останніх новин.
         </div>
         <div class="grid__item grid__item--4-9">
           <div class="subscribe__button">
-            <form action="/" class="subscribe__form">
+            <form
+              action="."
+              class="subscribe__form"
+              id="formID">
               <label
                 for="email">
               </label>
@@ -431,12 +439,14 @@
         </div>
         <div class="footer__link-container">
           <div>
-            <a href="#" class="footer__link">
+            <a href="#aboutUs" class="footer__link">
               Про Hac
             </a>
           </div>
           <div class="footer__link">
-            Контакти
+            <a href="tel:+38 (044) 278-13-57" class="footer__link">
+              Контакти
+            </a>
           </div>
         </div>
       </div>
