--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76" href="favicon/apple-touch-icon.png">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32" href="favicon/favicon-32x32.png">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link
+      rel="mask-icon"
+      href="favicon/safari-pinned-tab.svg" color="#172a2f">
+    <meta name="msapplication-TileColor" content="#b91d47">
+    <meta name="theme-color" content="#e71c1c">
     <title>Museum</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" >
@@ -87,14 +104,14 @@
             <br>
             МУЗЕЙ
           </h1>
-          <div class="museum__title-tiket">
+          <a  class="museum__title-tiket" href="#event">
             <div class="museum__title-tiket--text">
               квитки
             </div>
             <div class="museum__title-tiket--arrow">
               <img src="./images/arrow.svg" alt="arrow">
             </div>
-          </div>
+          </a>
           <div class="museum__title-tiket--before">Події</div>
         </div>
       </section>
@@ -255,7 +272,6 @@
           </form>
         </div>
       </section>
-
       <footer class="footer" id="footer">
         <div class="footer__container">
           <div class="footer__social">
@@ -302,12 +318,25 @@
                 </div>
               </div>
               <div class="footer__social--contact">
-                <div class="footer__social--contact-title">Контакти:</div>
-                <div class="footer__social--contact-adress">
-                  вул. М. Грушевського, 6; Київ, 01001 <br>
-                  тел. +38 (044) 278-13-57 <br>
-                  факс +38 (044) 278-74-54 <br>
-                  e-mail: info@namu.kiev.ua
+                <div class="footer__social--contact-title">Контакти:
+                  <br><br>
+                </div>
+                <div>
+                  <a class="footer__social--contact-adress" target="_blank"
+                  href="https://goo.gl/maps/yt3ScFjBQbbNwcwC9">
+                    вул. М. Грушевського, 6; Київ, 01001
+                    <br>
+                  </a>
+                  <a class="footer__social--contact-adress" target="_blank"
+                  href="tel:+38 (044) 278-13-57"> тел. +38 (044) 278-13-57 </a>
+                  <a class="footer__social--contact-adress" type="tel"
+                  target="_blank"
+                   href="tel:+38 (044) 278-74-54"> факс +38 (044) 278-74-54 <br> </a>
+                  <a class="footer__social--contact-adress" type="e-mail"
+                  href="e-mail: info@namu.kiev.ua"
+                   target="_blank">
+                    e-mail:info@namu.kiev.ua
+                  </a>
                 </div>
               </div>
             </div>
