--- a/src/index.html
+++ b/src/index.html
@@ -335,7 +335,9 @@
                   <a class="footer__social--contact-adress" type="e-mail"
                   href="e-mail: info@namu.kiev.ua"
                    target="_blank">
-                    e-mail:info@namu.kiev.ua
+                    e-mail:
+                    <br>
+                    info@namu.kiev.ua
                   </a>
                 </div>
               </div>
