fix image and button

--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,12 @@
           <a href="#menu" class="menu"></a>
           <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
           <div class="button">
-            <div class="button__event">ПОДІЇ</div>
+            <a href="#event" class="button__event">ПОДІЇ</a>
             <div class="button__wrapper">
-              <button class="button__ticket">КВИТКИ</button>
-              <div class="button__arrow">
+              <a href="#event" class="button__ticket">КВИТКИ</a>
+              <a href="#event" class="button__arrow">
                 <div class="button__img"></div>
-              </div>
+              </a>
             </div>
           </div>
         </div>
@@ -272,7 +272,8 @@
                   12:00 — 20:00  п’ятниця <br>
                   11:00 — 19:00 субота <br>
                   11:00 — 19:00 неділя <br><br>
-
+                </div>
+                <div class="footer__day-off">
                   Вихідні понеділок, вівторок
                   Каса припиняє роботу за 1 годину
                   до закриття музею
@@ -298,7 +299,7 @@
               </div>
             </div>
 
-            <div class="arrow-container">
+            <a href="#" class="arrow-container">
               <div class="arrow">
                 <img
                   src="./images/arrow-footer.svg"
@@ -306,7 +307,7 @@
                   class="arrow__item"
                 >
               </div>
-            </div>
+            </a>
           </div>
         
           <div class="footer__nav-container">
