Museum page second fixing

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                     <div class="about__tickets-position">
                       <div class="about__tickets">
                         <div class="about__content">
-                          Квітки
+                          Квитки
                         </div>
                         <a
                           href="#exhibitions"
@@ -296,6 +296,7 @@
                   <form
                     action="#"
                     class="subscribe__send"
+                    onsubmit="return false"
                   >
                     <input
                       type="email"
@@ -338,7 +339,7 @@
                 <a
                   class="footer__facebook"
                   target="_blank"
-                  href="#"
+                  href="https://www.facebook.com/na_mu"
                 >
                   <img
                     src="./images/Museum_facebook.svg"
@@ -348,7 +349,7 @@
                 <a
                   class="footer__inst"
                   target="_blank"
-                  href="#"
+                  href="https://www.instagram.com/na_mu"
                 >
                   <img
                     src="./images/Museum_inst.svg"
@@ -378,10 +379,34 @@
             <div class="footer__content">
               <h3 class="footer__title">Контакти:</h3>
               <div class="footer__info">
-                вул. М. Грушевського, 6; Київ, 01001<br>
-                тел. +38 (044) 278-13-57<br>
-                факс +38 (044) 278-74-54<br>
-                e-mail: info@namu.kiev.ua
+                <a
+                  class="footer__links"
+                  href="https://goo.gl/maps/z7M2bvvfgKdkTg9T7"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a><br>
+                <a
+                  class="footer__links"
+                  href="tel:+38 (044) 278-13-57"
+                  target="_blank"
+                >
+                  тел. +38 (044) 278-13-57
+                </a><br>
+                <a
+                  class="footer__links"
+                  href="tel:+38 (044) 278-13-57"
+                  target="_blank"
+                >
+                  факс +38 (044) 278-13-57
+                </a><br>
+                <a
+                  class="footer__links"
+                  href="mailto:info@namu.kiev.ua"
+                  target="_blank"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a><br>                
               </div>
             </div>
           </div>
