--- a/src/index.html
+++ b/src/index.html
@@ -39,19 +39,20 @@
       <div class="header-container">
         <div class="grid grid--desctop">
           <div class="grid__item grid__item--desctop-small-4-6 grid__item--desctop-big-6-12 page__section-container">         
-            <section class="page__section page__section--photo photo">                  
-              <a
-                href="index.html"
-                onclick="return false;"
-              >
-                <div class="logo--photo-container">
+            <section class="page__section page__section--photo photo">
+              <div class="logo--photo-container">              
+                <a
+                  class="photo__link"
+                  href="index.html"
+                  onclick="return false"
+                >                
                   <img
                     class="logo logo--photo "
                     src="images/NA MU.svg"
                     alt="MyBike"
-                  >
-                </div>
-              </a>                                       
+                  >               
+                </a>
+              </div>                                      
             </section> 
           </div>
           <div class="grid__item grid__item--desctop-small-1-3 grid__item--desctop-big-1-5">
