--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+
+    <header class="header">
+      <a href="#" class="header__logo link">NA<br>MU </a>
+      <div class="header__indent"></div>
+      <div class="header__elements">
+        <a href="#menu" class="header__menu-button">
+          <img src="./images/menu-icon.svg" alt="menu-icon">
+        </a>
+        <h1 class="header__title">
+          ХУДОЖ<span class="header__title--special">НІЙ</span>
+          <br>
+          МУЗЕЙ
+        </h1>
+        <a href="#" class="header__buy-button">
+          <div class="header__buy-button-text"></div>
+          <div class="header__buy-button-arrow"></div>
+        </a>
+        <a href="#" class="header__events link">ПОДІЇ</a>
+      </div>
+      <div class="header__image"></div>
+    </header>
+    <div class="page__menu menu" id="menu">
+      <div class="menu__content" >
+        <a href="#" class="menu__logo link">NA<br>MU </a>
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#" class="menu__link link">Галерея</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link link">Виставки та події</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link link">Відвідування</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link link">Стати нашим другом</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link link">Про Нас</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link link">Магазин</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link link">Блог</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link link">Контакти</a>
+          </li>
+        </ul>
+        <div class="menu__search">
+          <a href="#" class="menu__search-icon">
+            <img src="./images/search-icon.svg" alt="search-icon">
+          </a>
+        </div>
+      </div>
+    </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
