--- a/src/index.html
+++ b/src/index.html
@@ -276,7 +276,7 @@
 
           <form action="get" class="subscribe__button">
             <input
-            type="text"
+            type="email"
             class="subscribe__button-input"
             placeholder="E-mail"
             required
