added: header for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway&display=swap" rel="stylesheet">
     <script type="text/javascript" src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__nav">
+
+        <a href="#" class="logo">
+          <img
+            src="images/logo.png"
+            alt="namu"
+            class="logo__image"
+          >
+        </a>
+        <div class="header__nav--content">
+          <a href="#" class="header__languages">UA</a>
+
+          <a href="#menu" class="header__menu--opener"></a>
+        </div>
+      </div>
+
+      <p class="header__paragraph">10 серпня - 10 листопада</p>
+
+      <h1 class="header__title">
+        Мистецтво ХІХ - ХХ ст.
+      </h1>
+
+      <p class="header__paragraph">Внесок українських митців <br> у світову культуру 19-20 ст.</p>
+
+      <button class="header__button">Купити квиток</button>
+
+      <div class="header__image">
+        <img
+        src="images/header_image.png"
+        alt="girl"
+        class="image_girl"
+        >
+      </div>
+    </header>
   </body>
 </html>
