fixed instagram link, reduced scale() in gallery

--- a/src/index.html
+++ b/src/index.html
@@ -436,7 +436,7 @@
               </a>
   
               <a 
-                href="https://www.facebook.com/" 
+                href="https://www.instagram.com/" 
                 class="icons__icon"
                 target="_blank"
               >
