Museum page fifth fixing

--- a/src/index.html
+++ b/src/index.html
@@ -322,7 +322,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="contact">
       <div class="container">
         <div class="grid grid--footer">
           <div class="grid__item grid__item--on-phone-1 grid__item--laptop-1 grid__item--desctop-1">
@@ -437,7 +437,7 @@
             </a>
             <a
               class="footer__link"
-              href="#subscribe"
+              href="#contact"
             >
               Контакти
             </a>
