--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <div class="desktop">
         <div class="header__wrapper">
-          <a href="/" class="logo">
+          <a href="#" class="logo">
             NA
             <br>
             MU
@@ -240,7 +240,7 @@
         <div class="footer__container">
           <div class="footer__content">
             <div class="footer__social">
-              <a href="/" class="footer__logo">
+              <a href="#" class="footer__logo">
                 NA
                 <br>
                 MU
