added: menu for header

--- a/src/index.html
+++ b/src/index.html
@@ -11,40 +11,65 @@
     <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
-    <header class="header">
-      <div class="header__nav">
+    <header class="header" hidden>
+      <div class="container">
+        <div class="header__content">
+          <div class="header__nav">
 
-        <a href="#" class="logo">
-          <img
-            src="images/logo.png"
-            alt="namu"
-            class="logo__image"
-          >
-        </a>
-        <div class="header__nav--content">
-          <a href="#" class="header__languages">UA</a>
+            <a href="#" class="logo">
+              <img
+                src="images/logo.png"
+                alt="namu"
+                class="logo__image"
+              >
+            </a>
+            <div class="header__nav--content icon__nav">
+              <a href="#" class="header__languages">UA</a>
 
-          <a href="#menu" class="header__menu--opener"></a>
+              <a href="#menu" class="icon icon__menu"></a>
+            </div>
+          </div>
+
+          <p class="header__paragraph">10 серпня - 10 листопада</p>
+
+          <h1 class="header__title">
+            Мистецтво ХІХ - ХХ ст.
+          </h1>
+
+          <p class="header__paragraph">Внесок українських митців <br> у світову культуру 19-20 ст.</p>
+
+          <button class="header__button">Купити квиток</button>
+
+          <div class="header__image">
+            <img
+            src="images/header_image.png"
+            alt="girl"
+            class="image_girl"
+            >
+          </div>
         </div>
       </div>
-
-      <p class="header__paragraph">10 серпня - 10 листопада</p>
-
-      <h1 class="header__title">
-        Мистецтво ХІХ - ХХ ст.
-      </h1>
-
-      <p class="header__paragraph">Внесок українських митців <br> у світову культуру 19-20 ст.</p>
-
-      <button class="header__button">Купити квиток</button>
-
-      <div class="header__image">
-        <img
-        src="images/header_image.png"
-        alt="girl"
-        class="image_girl"
-        >
-      </div>
     </header>
+
+    <nav class="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__nav">
+            <a href="#" class="logo">
+              <img
+                src="images/logo.png"
+                alt="namu"
+                class="logo__image"
+              >
+            </a>
+            <div class="icon__nav">
+              <a href="#" class="icon icon__languages">UA</a>
+
+              <a href="#menu" class="icon icon__cross"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
