added: sliding menu

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
-    <header class="header" hidden>
+    <header class="header">
       <div class="container">
         <div class="header__content">
           <div class="header__nav">
@@ -51,7 +51,7 @@
       </div>
     </header>
 
-    <nav class="menu">
+    <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
           <div class="menu__nav">
@@ -65,9 +65,45 @@
             <div class="icon__nav">
               <a href="#" class="icon icon__languages">UA</a>
 
-              <a href="#menu" class="icon icon__cross"></a>
+              <a href="#" class="icon icon__cross"></a>
             </div>
           </div>
+
+          <div class="menu__info">
+            <div class="menu__info-title">
+              Розклад сьогодні:
+            </div>
+
+            <a href="#" class="menu__info-link">
+              12:00 - 19:00
+            </a>
+          </div>
+
+          <div class="menu__info">
+            <div class="menu__info-title">
+              Адреса:
+            </div>
+
+            <a href="#" class="menu__info-link">
+              Київ, вул. М. Грушевського, 6
+            </a>
+          </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Актуальні виставки</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#" class="menu__link">Найближчі події</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#" class="menu__link">Новини</a>
+            </li>
+          </ul>
+
+          <button class="menu__button">Купити квиток</button>
         </div>
       </div>
     </nav>
