added: button as a separate block

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
           <p class="header__paragraph">Внесок українських митців <br> у світову культуру 19-20 ст.</p>
 
-          <button class="header__button">Купити квиток</button>
+          <button class="button">Купити квиток</button>
 
           <div class="header__image">
             <img
@@ -103,7 +103,7 @@
             </li>
           </ul>
 
-          <button class="menu__button">Купити квиток</button>
+          <button class="button">Купити квиток</button>
         </div>
       </div>
     </nav>
